--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
-    "recharts": "^3.4.1"
+    "recharts": "^3.4.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
