--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
     "recharts": "^3.4.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
