feat: PWA setup + auth fixes + mobile optimization
- Add PWA manifest and service worker
- Fix auth guard timing issue with AuthSync component
- Add dedicated help page (/aide)
- Optimize mobile layout (edge-to-edge cards)
- Update favicons and meta tags

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,16 +10,34 @@
     "background_color": "#0c0f1a",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "/favicon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/apple-touch-icon.png",
+            "sizes": "180x180",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/web-app-manifest-192x192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "/web-app-manifest-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
+        },
+        {
+            "src": "/favicon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
+            "purpose": "any"
         }
     ],
     "categories": [
@@ -36,7 +54,7 @@
             "url": "/habits/new",
             "icons": [
                 {
-                    "src": "/icon-192x192.png",
+                    "src": "/web-app-manifest-192x192.png",
                     "sizes": "192x192"
                 }
             ]
@@ -48,7 +66,7 @@
             "url": "/reports/history",
             "icons": [
                 {
-                    "src": "/icon-192x192.png",
+                    "src": "/web-app-manifest-192x192.png",
                     "sizes": "192x192"
                 }
             ]
