--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "diff": "^8.0.2",
     "lucide-react": "^0.553.0",
     "luxon": "^3.7.2",
-    "next": "16.0.3",
-    "react": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "recharts": "^3.4.1",
     "remark-gfm": "^4.0.1",
