--- a/package.json
+++ b/package.json
@@ -24,18 +24,25 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.4.1",
     "remark-gfm": "^4.0.1",
-    "web-push": "^3.6.7"
+    "swr": "^2.3.8",
+    "web-push": "^3.6.7",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/luxon": "^3.7.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/web-push": "^3.6.4",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "jsdom": "^27.4.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   }
 }
