--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "chart.js": "^4.5.1",
     "diff": "^8.0.2",
     "lucide-react": "^0.553.0",
@@ -22,9 +27,11 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
+    "react-player": "^3.4.0",
     "recharts": "^3.4.1",
     "remark-gfm": "^4.0.1",
     "swr": "^2.3.8",
+    "unfurl.js": "^6.4.0",
     "web-push": "^3.6.7",
     "zod": "^4.3.4"
   },
