correction de l'apit

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     {
       "path": "/api/ai-reports/auto-archive",
       "schedule": "0 3 * * *"
+    },
+    {
+      "path": "/api/process-reminders",
+      "schedule": "* * * * *"
     }
   ]
 }
-
